--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -67,6 +67,23 @@ body {
   position: absolute;
   bottom: 0;
   width: 100%;
-  white-space: nowrap;
+  white-space: normal;
   /*line-height: 60px;*/ /* Vertically center the text there */
 }
+
+#page-container {
+    position: relative;
+    min-height: 100vh;
+}
+
+#content-wrap {
+    padding-bottom: 15rem;
+}
+
+#footer {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    
+}
+
