--- a/Views/Home/Cart.cshtml
+++ b/Views/Home/Cart.cshtml
@@ -52,7 +52,7 @@
     </tbody>
 </table>
 
-@using (Html.BeginForm("Checkout", "Home", FormMethod.Get))
+@using (Html.BeginForm("CheckoutPage", "Home", FormMethod.Get))
 {
     <button class="btn btn-primary" type="submit">Checkout</button>
 }
