--- a/Views/Home/CheckoutPage.cshtml
+++ b/Views/Home/CheckoutPage.cshtml
@@ -1,9 +1,15 @@
 ﻿@model VPWebSolutions.Models.CheckoutModel
+@using Microsoft.AspNetCore.Identity
+@inject SignInManager<ApplicationUser> SignInManager
+@inject UserManager<ApplicationUser> UserManager
+
 
 @{
-    ViewData["Title"] = "CheckoutPage";
+ViewData["Title"] = "CheckoutPage";
 }
 @using VPWebSolutions.Logic;
+
+
 
 <h1>Checkout Page</h1>
 <hr />
@@ -12,12 +18,11 @@
     <ul style="list-style-type:none">
         @foreach (var orderItem in CartActions.listItems)
         {
-            <li>
-                @orderItem.Quantity
-                @orderItem.MenuItem.Name
-                @orderItem.UnitPrice.ToString("c")
-            </li>
-            <hr />
+        <li>
+            @orderItem.Quantity
+            @orderItem.MenuItem.Name
+            @orderItem.UnitPrice.ToString("c")
+        </li>
         }
         <li>Subtotal: @CartActions.listItems.Sum(oi => oi.UnitPrice * oi.Quantity).ToString("c")</li>
         <li>Taxes: @CartActions.listItems.Sum(oi => oi.UnitPrice * oi.Quantity * 0.15).ToString("c")</li>
@@ -29,50 +34,98 @@
     <h3>Billing information</h3>
 </div>
 <hr />
+@if (!SignInManager.IsSignedIn(User))
+{
 <div class="row">
     <div class="col-md-4">
         @*<form asp-action="Checkout">*@
-        @*<form>*@
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+        <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+        <div class="form-group">
+            <label asp-for="FirstName" class="control-label"></label>
+            <input asp-for="FirstName" class="form-control" />
+            <span asp-validation-for="FirstName" class="text-danger"></span>
+        </div>
+        <div class="form-group">
+            <label asp-for="LastName" class="control-label"></label>
+            <input asp-for="LastName" class="form-control" />
+            <span asp-validation-for="LastName" class="text-danger"></span>
+        </div>
+        <div class="form-group">
+            <label asp-for="PostalCode" class="control-label"></label>
+            <input asp-for="PostalCode" class="form-control" />
+            <span asp-validation-for="PostalCode" class="text-danger"></span>
+        </div>
+        <div class="form-group">
+            <label asp-for="Email" class="control-label"></label>
+            <input asp-for="Email" class="form-control" />
+            <span asp-validation-for="Email" class="text-danger"></span>
+        </div>
+        <div class="form-group">
+            <label asp-for="Phone" class="control-label"></label>
+            <input asp-for="Phone" class="form-control" />
+            <span asp-validation-for="Phone" class="text-danger"></span>
+        </div>
+
+        <div>
+            <p class="control-label">Method of Payment</p>
+
+            <label>
+                <input type="radio" name="type" class="form-control" id="creditCard" onclick="checkMethodPayment()" checked> Credit Card
+            </label>
+
+            <label>
+                <input type="radio" name="type" class="form-control" id="cash" onclick="checkMethodPayment()">  Cash
+            </label>
+
+            <span class="text-danger"></span>
+        </div>
+        <div id="creditCardInfo">
             <div class="form-group">
-                <label asp-for="FirstName" class="control-label"></label>
-                <input asp-for="FirstName" class="form-control" />
-                <span asp-validation-for="FirstName" class="text-danger"></span>
+                <label asp-for="CreditNumber" class="control-label"></label>
+                <input asp-for="CreditNumber" class="form-control" />
+                <span asp-validation-for="CreditNumber" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="LastName" class="control-label"></label>
-                <input asp-for="LastName" class="form-control" />
-                <span asp-validation-for="LastName" class="text-danger"></span>
+                <label asp-for="Month" class="control-label"></label>
+                <input asp-for="Month" class="form-control" />
+                <span asp-validation-for="Month" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="PostalCode" class="control-label"></label>
-                <input asp-for="PostalCode" class="form-control" />
-                <span asp-validation-for="PostalCode" class="text-danger"></span>
+                <label asp-for="Year" class="control-label"></label>
+                <input asp-for="Year" class="form-control" />
+                <span asp-validation-for="Year" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Email" class="control-label"></label>
-                <input asp-for="Email" class="form-control" />
-                <span asp-validation-for="Email" class="text-danger"></span>
+                <label asp-for="SecurityCode" class="control-label"></label>
+                <input asp-for="SecurityCode" class="form-control" />
+                <span asp-validation-for="SecurityCode" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <label asp-for="Phone" class="control-label"></label>
-                <input asp-for="Phone" class="form-control" />
-                <span asp-validation-for="Phone" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                @using (Html.BeginForm("Checkout", "Home", FormMethod.Get))
+        </div>
+        <div class="form-group">
+            @using (Html.BeginForm("Checkout", "Home", FormMethod.Get))
                 {
-                    <button class="btn btn-primary" type="submit">Place your order</button>
+            <button class="btn btn-primary" type="submit">Place your order</button>
                 }
-            </div>
-        @*</form>*@
+        </div>
+
     </div>
 </div>
+}
 
-<div>
-    <a asp-action="Index">Back to List</a>
-</div>
 
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
 }
+<style>
+</style>
+
+<script>
+    function checkMethodPayment() {
+        var creditCardInfo = document.getElementById("creditCardInfo");
+
+        var cash = document.getElementById("cash");
+
+        creditCardInfo.style.display = cash.checked ? "none" : "block";
+    }
+
+</script>
