different page redirect

--- a/Views/Home/Cart.cshtml
+++ b/Views/Home/Cart.cshtml
@@ -62,7 +62,7 @@ else
         </tbody>
     </table>
 
-    @using (Html.BeginForm("Checkout", "Home", FormMethod.Get))
+    @using (Html.BeginForm("CheckoutPage", "Home", FormMethod.Get))
     {
         <button class="btn btn-primary" type="submit">Checkout</button>
     }
