--- a/Views/Home/CheckoutPage.cshtml
+++ b/Views/Home/CheckoutPage.cshtml
@@ -34,35 +34,56 @@ ViewData["Title"] = "CheckoutPage";
     <h3>Billing information</h3>
 </div>
 <hr />
-@if (!SignInManager.IsSignedIn(User))
-{
+@*@if (!SignInManager.IsSignedIn(User))
+{*@
 <div class="row">
     <div class="col-md-4">
         @*<form asp-action="Checkout">*@
         <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+
+        @if (!SignInManager.IsSignedIn(User))
+        {
+            <div class="form-group">
+                <label asp-for="FirstName" class="control-label"></label>
+                <input asp-for="FirstName" class="form-control" value="" />
+                <span asp-validation-for="FirstName" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="LastName" class="control-label"></label>
+                <input asp-for="LastName" class="form-control" />
+                <span asp-validation-for="LastName" class="text-danger"></span>
+            </div>
+        }
         <div class="form-group">
-            <label asp-for="FirstName" class="control-label"></label>
-            <input asp-for="FirstName" class="form-control" />
-            <span asp-validation-for="FirstName" class="text-danger"></span>
-        </div>
-        <div class="form-group">
-            <label asp-for="LastName" class="control-label"></label>
-            <input asp-for="LastName" class="form-control" />
-            <span asp-validation-for="LastName" class="text-danger"></span>
+            <label asp-for="Address" class="control-label"></label>
+            @if (!SignInManager.IsSignedIn(User))
+            {<input asp-for="Address" class="form-control" /> }
+            else
+            { <input asp-for="Address" class="form-control" value="@UserManager.GetUserAsync(User).Result.Address" />}
+            <span asp-validation-for="Address" class="text-danger"></span>
         </div>
         <div class="form-group">
             <label asp-for="PostalCode" class="control-label"></label>
-            <input asp-for="PostalCode" class="form-control" />
+            @if (!SignInManager.IsSignedIn(User))
+            {<input asp-for="PostalCode" class="form-control" /> }
+            else
+            { <input asp-for="PostalCode" class="form-control" value="@UserManager.GetUserAsync(User).Result.PostalCode" />}
             <span asp-validation-for="PostalCode" class="text-danger"></span>
         </div>
         <div class="form-group">
             <label asp-for="Email" class="control-label"></label>
-            <input asp-for="Email" class="form-control" />
+            @if (!SignInManager.IsSignedIn(User))
+            {<input asp-for="Email" class="form-control" /> }
+            else
+            { <input asp-for="Email" class="form-control" value="@UserManager.GetUserAsync(User).Result.Email" />}
             <span asp-validation-for="Email" class="text-danger"></span>
         </div>
         <div class="form-group">
             <label asp-for="Phone" class="control-label"></label>
-            <input asp-for="Phone" class="form-control" />
+            @if (!SignInManager.IsSignedIn(User))
+            {<input asp-for="Phone" class="form-control" /> }
+            else
+            { <input asp-for="Phone" class="form-control" value="@UserManager.GetUserAsync(User).Result.PhoneNumber" />}
             <span asp-validation-for="Phone" class="text-danger"></span>
         </div>
 
@@ -103,14 +124,14 @@ ViewData["Title"] = "CheckoutPage";
         </div>
         <div class="form-group">
             @using (Html.BeginForm("Checkout", "Home", FormMethod.Get))
-                {
-            <button class="btn btn-primary" type="submit">Place your order</button>
-                }
+            {
+                <button class="btn btn-primary" type="submit">Place your order</button>
+            }
         </div>
 
     </div>
 </div>
-}
+@* } *@
 
 
 @section Scripts {
