--- a/Views/Order/Orders.cshtml
+++ b/Views/Order/Orders.cshtml
@@ -13,11 +13,12 @@
             <th>
                 @Html.DisplayNameFor(model => model.Id)
             </th>
-            <th>
-                @Html.DisplayNameFor(model => model.CustomerId)
-            </th>
+            @* TODO: maybe add customer name? *@
             <th>
                 @Html.DisplayNameFor(model => model.Items)
+            </th>
+            <th>
+                Delivery Address
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.OrderDate)
@@ -29,36 +30,46 @@
         </tr>
     </thead>
     <tbody>
-@foreach (var item in Model) {
+@foreach (var order in Model) {
         <tr>
             <td>
-                @Html.DisplayFor(modelItem => item.Id)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.CustomerId)
+                @Html.DisplayFor(modelItem => order.Id)
             </td>
             <td>
                 <ul>
-               @foreach(var oi in item.Items)
+               @foreach(var oi in order.Items)
                 {
                    <li>
                        @oi.Quantity @oi.MenuItem.Name 
                    </li>
                 }
-                    <li>@item.Status.Next()</li>
                 </ul>
             </td>
+            @if(order.Customer != null)
+            {
+                <td>@order.Customer.Address</td>
+            }
+            else
+            {
+                <td></td>
+            }
             <td>
-                @Html.DisplayFor(modelItem => item.OrderDate)
+                @Html.DisplayFor(modelItem => order.OrderDate)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Status)
+                @Html.DisplayFor(modelItem => order.Status)
             </td>
             <td>
-                @Html.ActionLink("View", "Order", new {  id=item.Id  }, null) |
-                @Html.ActionLink(String.Format("Set status to " + item.Status.Next().ToString()), "UpdateStatus", new {id=item.Id}, null)
-                @*@Html.ActionLink("Details", "Details", new { /* id=item.PrimaryKey */ }) |
-                @Html.ActionLink("Delete", "Delete", new { /* id=item.PrimaryKey */ })*@
+                @using (Html.BeginForm("Order", "Order", new { id = order.Id }, FormMethod.Get))
+                {
+                <button class="btn btn-primary" type="submit" style="background-color:#F7CE37; color:black">View</button>
+                }
+                @using (Html.BeginForm("UpdateStatus", "Order", new { id = order.Id }, FormMethod.Post))
+                {
+                    <button class="btn btn-primary" type="submit" style="background-color: #F7CE37; color: black">@String.Format("Set status to " + order.Status.Next().ToString())</button>
+                }
+                @*@Html.ActionLink("View", "Order", new { id = order.Id }, null) |
+        @Html.ActionLink(String.Format("Set status to " + order.Status.Next().ToString()), "UpdateStatus", new { id = order.Id }, null)*@
             </td>
         </tr>
 }
