Cart removes the right thing and shows size of pizza

--- a/Views/Home/Cart.cshtml
+++ b/Views/Home/Cart.cshtml
@@ -26,6 +26,9 @@ else
                     @Html.DisplayNameFor(model => model.MenuItem.Name)
                 </th>
                 <th>
+                    <p>Size</p>
+                </th>
+                <th>
                     @Html.DisplayNameFor(model => model.Quantity)
                 </th>
                 <th>
@@ -38,26 +41,34 @@ else
         <tbody>
             @foreach (var item in CartActions.listItems)
             {
-                <tr>
-                    <td>
-                        <img src="~/images/@(item.MenuItem.ImageId).jpg" class="menuImg" height="100" />
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.MenuItem.Name)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.Quantity)
-                    </td>
-                    <td>
-                        <p>$@((item.MenuItem.Price*item.Quantity))</p>
-                    </td>
-                    <td>
-                        @using (Html.BeginForm("CartRemove", "Home", new { ItemId = item.Id }, FormMethod.Post))
-                        {
-                            <button class="btn btn-primary" type="submit">Remove</button>
-                        }
-                    </td>
-                </tr>
+            <tr>
+                <td>
+                    <img src="~/images/@(item.MenuItem.ImageId).jpg" class="menuImg" height="100" />
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.MenuItem.Name)
+                </td>
+                <td>
+                    @if(item.MenuItem.Type == VPWebSolutions.Data.Entities.MenuItemType.Pizza)
+                    {
+                        VPWebSolutions.Data.Entities.Pizza pizza = (VPWebSolutions.Data.Entities.Pizza)item.MenuItem;
+                        <p>@pizza.Size</p>
+                    }
+                    @*@Html.DisplayFor(modelItem => item.MenuItem)*@
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Quantity)
+                </td>
+                <td>
+                    <p>$@((item.MenuItem.Price*item.Quantity))</p>
+                </td>
+                <td>
+                    @using (Html.BeginForm("CartRemove", "Home", new { ItemId = item.MenuItem.Id }, FormMethod.Post))
+                    {
+                        <button class="btn btn-primary" type="submit">Remove</button>
+                    }
+                </td>
+            </tr>
             }
         </tbody>
     </table>
