--- a/Views/Order/Orders.cshtml
+++ b/Views/Order/Orders.cshtml
@@ -13,7 +13,7 @@
                 @Html.DisplayNameFor(model => model.Id)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.CustomerId)
+                @Html.DisplayNameFor(model => model.UserData.UserDataId)
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.Items)
@@ -34,7 +34,7 @@
                 @Html.DisplayFor(modelItem => item.Id)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.CustomerId)
+                @Html.DisplayFor(modelItem => item.UserData.UserDataId)
             </td>
             <td>
                 <li>
