--- a/Views/Order/Orders.cshtml
+++ b/Views/Order/Orders.cshtml
@@ -3,6 +3,7 @@
 @{
     ViewData["Title"] = "Orders";
 }
+@using VPWebSolutions.Data 
 
 <h1>Orders</h1>
 
@@ -12,11 +13,12 @@
             <th>
                 @Html.DisplayNameFor(model => model.Id)
             </th>
-            <th>
-                @Html.DisplayNameFor(model => model.UserData.UserDataId)
-            </th>
+            @* TODO: maybe add customer name? *@
             <th>
                 @Html.DisplayNameFor(model => model.Items)
+            </th>
+            <th>
+                Delivery Address
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.OrderDate)
@@ -28,29 +30,40 @@
         </tr>
     </thead>
     <tbody>
-@foreach (var item in Model) {
+@foreach (var order in Model) {
         <tr>
             <td>
-                @Html.DisplayFor(modelItem => item.Id)
+                @Html.DisplayFor(modelItem => order.Id)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.UserData.UserDataId)
+                <ul>
+               @foreach(var oi in order.Items)
+                {
+                   <li>
+                       @oi.Quantity @oi.MenuItem.Name 
+                   </li>
+                }
+                </ul>
+            </td>
+            @if(order.Customer != null)
+            {
+                <td>@order.Customer.Address</td>
+            }
+            else
+            {
+                <td></td>
+            }
+            <td>
+                @Html.DisplayFor(modelItem => order.OrderDate)
             </td>
             <td>
-                <li>
-
-                </li>
+                @Html.DisplayFor(modelItem => order.Status)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.OrderDate)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Status)
-            </td>
-            <td>
-                @Html.ActionLink("View", "Order", new {  id=item.Id  }, null) |
-                @Html.ActionLink("Details", "Details", new { /* id=item.PrimaryKey */ }) |
-                @Html.ActionLink("Delete", "Delete", new { /* id=item.PrimaryKey */ })
+                @using (Html.BeginForm("UpdateStatus", "Order", new { id = order.Id }, FormMethod.Post))
+                {
+                    <button class="btn btn-primary" type="submit" style="background-color: #F7CE37; color: black">@String.Format("Set status to " + order.Status.Next().ToString())</button>
+                }
             </td>
         </tr>
 }
