--- a/Views/Order/Orders.cshtml
+++ b/Views/Order/Orders.cshtml
@@ -3,6 +3,7 @@
 @{
     ViewData["Title"] = "Orders";
 }
+@using VPWebSolutions.Data
 
 <h1>Orders</h1>
 
@@ -13,7 +14,7 @@
                 @Html.DisplayNameFor(model => model.Id)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.UserData.UserDataId)
+                @Html.DisplayNameFor(model => model.Customer.Address)
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.Items)
@@ -28,31 +29,37 @@
         </tr>
     </thead>
     <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.Id)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.UserData.UserDataId)
-            </td>
-            <td>
-                <li>
-
-                </li>
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.OrderDate)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Status)
-            </td>
-            <td>
-                @Html.ActionLink("View", "Order", new {  id=item.Id  }, null) |
-                @Html.ActionLink("Details", "Details", new { /* id=item.PrimaryKey */ }) |
-                @Html.ActionLink("Delete", "Delete", new { /* id=item.PrimaryKey */ })
-            </td>
-        </tr>
-}
+        @foreach (var order in Model)
+        {
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => order.Id)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => order.Customer.Address)
+                </td>
+                <td>
+                    @foreach (var oi in order.Items)
+                    {
+                        <li>
+                            @oi.Quantity @oi.MenuItem.Name
+                        </li>
+                    }
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => order.OrderDate)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => order.Status)
+                </td>
+                <td>
+                    @*@Html.ActionLink("View", "Order", new { id = order.Id }, null) |*@
+                    @using (Html.BeginForm("UpdateStatus", "Order", new { id = order.Id }, FormMethod.Post))
+                    {
+                        <button class="btn btn-primary" type="submit" style="background-color: #F7CE37; color: black">@String.Format("Set status to " + order.Status.Next().ToString())</button>
+                    }
+                </td>
+            </tr>
+        }
     </tbody>
 </table>
