Navbar made to look better, home page looks better and removed the tracking lines

--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -124,7 +124,7 @@
         background-color: #F7CE37;
     }
     .nav-link {
-        color: #F4FAF9;
+        color: #28334AFF;
     }
     html, body {
         background-color: #6D47AB;
