--- a/Views/Home/CheckoutPage.cshtml
+++ b/Views/Home/CheckoutPage.cshtml
@@ -108,12 +108,36 @@
                 </div>
                 <div class="form-group">
                     <label asp-for="Month" class="control-label"></label>
-                    <input asp-for="Month" class="form-control" />
+                    <select name="Month" id="Topic">
+                        <option value="" selected disabled hidden>Choose Month</option>
+                        <option value="January">January</option>
+                        <option value="February">February</option>
+                        <option value="March">March</option>
+                        <option value="April">April</option>
+                        <option value="May">May</option>
+                        <option value="June">June </option>
+                        <option value="July">July</option>
+                        <option value="August">August</option>
+                        <option value="September">September</option>
+                        <option value="October">October</option>
+                        <option value="November">November</option>
+                        <option value="December">December</option>
+
+
+                    </select>
                     <span asp-validation-for="Month" class="text-danger"></span>
                 </div>
                 <div class="form-group">
                     <label asp-for="Year" class="control-label"></label>
-                    <input asp-for="Year" class="form-control" />
+                    <select id="year" name="Year">
+                        <option>year</option>
+                        <option value="2021">2021</option>
+                        <option value="2022">2022</option>
+                        <option value="2023">2023</option>
+                        <option value="2024">2024</option>
+                        <option value="2025">2025</option>
+                        <option value="2026">2026</option>
+                    </select>
                     <span asp-validation-for="Year" class="text-danger"></span>
                 </div>
                 <div class="form-group">
